[project]
name = "mechcloud-flask-proxy"
version = "1.0.0"
description = "A https proxy for public/private APIs. Handles CORS too."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "pyopenssl>=25.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
